# path-planning-for-crowd-simulation

./: AUTHORS  COPYING  Makefile.am  Makefile.in  READERME.txt  aclocal.m4  configure  configure.ac  office.txt
doc/: Doxyfile.in  Makefile.am  Makefile.in
doc/html/: _r_v_o_simulator_8h.html  annotated.html  class_r_v_o_1_1_r_v_o_simulator-members.html  class_r_v_o_1_1_r_v_o_simulator.html  class_r_v_o_1_1_vector2-members.html  class_r_v_o_1_1_vector2.html  classes.html  compiling.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  params.html  using.html  vector2_8h.html
example/: Makefile.am  Makefile.in  UpgradeLog.htm  example.cpp  example.sln  example.vcproj  example.vcxproj  example.vcxproj.filters  simulation_3dbuilding.m  simulation_building.m  simulation_office_large_with_orientation.m  untitled.fig
example/Backup/: example.sln
example/Debug/: vc120.idb
example/Debug/example.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  example.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/lib/: rvo_d.lib
include/: RVOSimulator.h  vector2.h
input/3d/: 150人一个障碍无本文方法位置.txt  3d_people.txt  3dbuilding-1.txt  3dbuilding.txt  3dbuildingno.txt  3dbuildingno1.txt  3dbuildingno2 - 副本.txt  3dbuildingno3.txt  3dbuildingno4.txt  building - 备份.txt  building.txt  building1.txt  building2.txt  jianhuaroadmap.txt  office.txt  office170.txt  office180.txt  office2.txt  office200.txt  officepeople.txt  officeroadmap.txt  officeroadmapp.txt  people10.txt  people100 (2).txt  people100 - 备份.txt  people100.txt  people1000.txt  people110.txt  people130.txt  people14.txt  people15 (2).txt  people15.txt  people150.txt  people16.txt  people170.txt  people18.txt  people190.txt  people20 (2).txt  people20(1).txt  people20.txt  (+34 more)
m4/: ac_prog_try_doxygen.m4
output/3d/: s21.rar
output/3d/20人无障碍文件/: cmx00000.txt  cmx00001.txt  cmx00002.txt  cmx00003.txt  cmx00004.txt  cmx00005.txt  cmx00006.txt  cmx00007.txt  cmx00008.txt  cmx00009.txt  cmx00010.txt  cmx00011.txt  cmx00012.txt  cmx00013.txt  cmx00014.txt  cmx00015.txt  cmx00016.txt  cmx00017.txt  cmx00018.txt  cmx00019.txt  cmx00020.txt  cmx00021.txt  cmx00022.txt  cmx00023.txt  cmx00024.txt  cmx00025.txt  cmx00026.txt  cmx00027.txt  cmx00028.txt  cmx00030.txt  cmx00031.txt  cmx00032.txt  cmx00034.txt  cmx00035.txt
output/3d/50人相似文件/: cmx00001.txt  (+24 more)
(+71591 files in other folders)
